<resources>
    <string name="app_name">FluxMe</string>
    <string name="strIniciarSesion">Iniciar Sesión</string>
    <string name="strEmail">Correo electrónico</string>
    <string name="strSesionActiva">No cerrar sesión</string>
    <string name="strProgSem">Programación semanal</string>
    <string name="strTendencias">Tendencias</string>

    <string name="facebook_app_id">2030187973903140</string>
    <string name="fb_login_protocol_scheme">fb2030187973903140</string>
    <string name="infoRegistrar">Todavía no tienes una cuenta en Fluxme?</string>
    <string name="strRegistrateAqui"><![CDATA[<u>Regístrate Aquí</u>]]></string>

    <string name="tabTitPerfilEmisora">Perfil Emisora</string>
    <string name="tabTitChat">Chat</string>
    <string name="tabTitVotaciones">Votaciones</string>
    <string name="tabTitTendencias">Tendencias</string>
    <string name="tabTitProgramacion">Programación</string>
    <string name="tabTitPerfil">Perfil</string>
    <string name="tabTitEstadisticas">Estadísticas</string>
    <string name="tabTitGPS">GPS</string>
    <string name="strEmisorasDisponibles">Emisoras Disponibles</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
